<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Temples">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:text="@string/temp1"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="497dp"
                android:layout_height="511dp"
                android:scaleType="fitXY"
                android:src="@drawable/trimandir" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:text="@string/temp1_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:text="@string/temp2"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="443dp"
                android:layout_height="432dp"
                android:scaleType="fitXY"
                android:src="@drawable/temple2" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:text="@string/temp2_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:text="@string/temp3"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="488dp"
                android:layout_height="513dp"
                android:scaleType="fitXY"
                android:src="@drawable/temp3" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:text="@string/temp3_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:text="@string/temp4"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="492dp"
                android:layout_height="513dp"
                android:scaleType="fitXY"
                android:src="@drawable/temp4" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:text="@string/temp4_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:text="@string/temp5"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="493dp"
                android:layout_height="557dp"
                android:src="@drawable/temp5"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:text="@string/temp5_details"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>